# NeoIMP-1.0.0

./: CODING  CONTRIBUTING  README
NeoIMP/: CMakeLists.txt  IApplication.hpp  Main.cpp  neoimp.cpp
NeoIMP/NeoIMP/: Main.cpp
NeoIMP/NeoIMP/SDF/: CMakeLists.txt  Exception.hpp  SafeString.hpp
NeoIMP/NeoIMP/SDF.old/Exception/: Exception.hpp
NeoIMP/NeoIMP/SDF.old/Interfaces/: IFactory.hpp  IGenerator.hpp  IMessageBroker.hpp  IMessageReceiver.hpp  IMessageSubscriber.hpp
NeoIMP/NeoIMP/SDF.old/ModelLayer.old/: CMakeLists.txt
NeoIMP/NeoIMP/SDF.old/Support/: UidGenerator.tpp
NeoIMP/NeoIMP/SDF.old2/UILayer/: CMakeLists.txt  IApplication.hpp
NeoIMP/NeoIMP/SDF.old3/: CMakeLists.txt
NeoIMP/NeoIMP/SDF.old3/ModelLayer/: CMakeLists.txt
NeoIMP/NeoIMP/SDF.old3/Patterns/: IConnection.hpp  IFactory.hpp
NeoIMP/NeoIMP/SDF.old3/UILayer/: CMakeLists.txt  IApplication.hpp
NeoIMP/NeoIMP/SDF/Common/: FunctionListener.hpp  FunctionListener.tpp  Handle.hpp  IListener.hpp  IUUIDable.hpp  ListenerContainer.tpp
NeoIMP/SDF/: ApplicationComponent.cpp  ApplicationComponent.hpp  CMakeLists.txt  Exception.hpp  IApplication.cpp  IApplication.hpp  IStartUICommandReceiver.hpp  getComponent.cpp  getComponent.hpp
NeoIMP/SDF.old/: CMakeLists.txt
NeoIMP/SDF.old/DataLayer/Exceptions/: Exceptions.hpp
NeoIMP/SDF.old/DataLayer/Persistence/: Component.hpp
NeoIMP/SDF.old/DataLayer/Repositories/: CMakeLists.txt  Component.hpp  FilterRepository.hpp  FilterRepository.tpp  ImageRepository.cpp  MemoryOnlyRepository.hpp  MemoryOnlyRepository.tpp
NeoIMP/SDF.old/Exception/: SafeString.hpp
NeoIMP/SDF.old/Interfaces/: IMessagePublisher.hpp  IObservable.hpp
NeoIMP/SDF.old/ModelLayer.old/AbstractData/: IFileSystemPersistenceController.hpp  IRepository.hpp
NeoIMP/SDF.old/ModelLayer.old/DomainObjects/: CMakeLists.txt  ObjectMap.hpp  ObjectMap.tpp
NeoIMP/SDF.old/ModelLayer.old/Services/: BrokerId.hpp  Component.cpp  DocumentAccessService.cpp  DocumentCreationService.hpp  DocumentRenderService.hpp  ToolConfigService.hpp  ToolConfigService.tpp  UiStateModelService.tpp  ZoomToolCfgService.hpp
NeoIMP/SDF.old/ModelLayer/DomainObjects/: IPersistibleDomainObject.hpp
NeoIMP/SDF.old/ModelLayer/Repositories/: InMemoryRepository.hpp  InMemoryRepository.tpp
NeoIMP/SDF.old/UILayer/AbstractModel/: IDocumentDimensionsService.hpp  IEditingTargetService.hpp  ISaveDocumentService.hpp  IToolControlService.hpp
NeoIMP/SDF.old/UILayer/AbstractModel.old/: IDocumentAccessService.hpp  IDocumentRenderService.hpp  IDocumentViewConfigService.hpp  IUiStateModelService.hpp
NeoIMP/SDF.old/UILayer/Application/: CMakeLists.txt
NeoIMP/SDF.old/UILayer/Exceptions/: Exceptions.hpp
NeoIMP/SDF.old/UILayer/Gui/: Component.cpp  Component.hpp  Gui.hpp  IGuiController.hpp  StateKeys.hpp
NeoIMP/SDF.old/UILayer/Metrics/: DimensionlessUnits.hpp  ResolutionUnit.hpp  lengthIn.hpp  makeLength.hpp  makeResolution.hpp
NeoIMP/SDF.old/UILayer/Strings/: UnitSymbols.hpp
NeoIMP/SDF.old2/: Exception.hpp
NeoIMP/SDF.old2/ModelLayer/: CMakeLists.txt
NeoIMP/SDF.old2/ModelLayer/AbstractData/: IDataMapper.hpp
NeoIMP/SDF.old2/ModelLayer/DomainObjects/: IDomainObject.hpp  IFactory.hpp  IUidGenerator.hpp
NeoIMP/SDF.old2/ModelLayer/Metrics/: DimensionlessUnits.hpp  LengthQuantity.hpp  LengthUnit.hpp  ResolutionUnits.hpp  lengthIn.hpp  lengthInUi.hpp  makeResolution.hpp  resolutionIn.hpp  resolutionInUi.hpp
NeoIMP/SDF.old2/ModelLayer/Repositories/: IRepository.hpp
NeoIMP/SDF.old2/ModelLayer/Services/: CMakeLists.txt  Component.hpp
NeoIMP/SDF.old2/UILayer/: IApplication.hpp
NeoIMP/SDF.old2/UILayer/QtApplication/: Application.hpp
NeoIMP/SDF.old3/ModelLayer/: Component.cpp
NeoIMP/SDF.old3/ModelLayer/DomainObjects/: IDomainObject.hpp  Uid.hpp
NeoIMP/SDF.old3/ModelLayer/Exceptions/: Exceptions.hpp
NeoIMP/SDF.old3/ModelLayer/Math/: Rect.hpp
NeoIMP/SDF.old3/ModelLayer/Repositories/: IRepository.hpp
NeoIMP/SDF.old3/ModelLayer/Services/: Component.hpp
NeoIMP/SDF.old3/Patterns/: IObserver.hpp
NeoIMP/SDF.old3/UILayer/: BaseHook.hpp  Component.cpp  Component.hpp
NeoIMP/SDF.old3/UILayer/AbstractModel/: IMetricsService.hpp
NeoIMP/SDF.old3/UILayer/Gui/: CMakeLists.txt
NeoIMP/SDF.old3/UILayer/Mvc/: IView.hpp  ViewNode.cpp
NeoIMP/SDF/Common/: AFactory.hpp  CFunctionListener.hpp  CFunctionListener.tpp  CMakeLists.txt  Exceptions.hpp  FunctionListener.hpp  FunctionListener.tpp  Handle.hpp  IConnection.hpp  IFactory.hpp  IGettable.hpp  IListenable.hpp  IListener.hpp  ISettable.hpp  IThrower.hpp  IValidationResult.hpp  IValidator.hpp  IValueField.hpp  IVisitable.hpp  ListenerContainer.hpp  ListenerContainer.tpp  ListenerMapContainer.hpp  ListenerMapContainer.tpp  Meta.hpp  Overload.hpp  Png.hpp  Png.tpp  TGrid.hpp  TGrid.tpp  THandle.hpp  TRangedNum.hpp  ValueField.hpp  ValueField.tpp
NeoIMP/SDF/DataLayer/: CMakeLists.txt  Component.cpp  Component.hpp  Exceptions.hpp
NeoIMP/SDF/Editor/: CMakeLists.txt
NeoIMP/SDF/Error/: CMakeLists.txt  DataException.cpp  DataException.hpp  Exception.hpp  GeneralException.cpp  GeneralException.hpp  ModelException.cpp  ModelException.hpp  SafeString.hpp  UiException.hpp
NeoIMP/SDF/Exception/: Exception.hpp
NeoIMP/SDF/Impl/: CMakeLists.txt
NeoIMP/SDF/Interfaces/: IBorrowedFactory.hpp  IEventHandler.hpp
NeoIMP/SDF/ModelLayer/: CMakeLists.txt  Component.cpp  Component.hpp  Exceptions.hpp  Handle.hpp
NeoIMP/SDF/Patterns/: IConnection.hpp  IFactory.hpp  IListener.hpp  IObservable.hpp  IObserver.hpp  Listenable.hpp  Listenable.tpp  Subject.hpp  Subject.tpp
NeoIMP/SDF/Qt/: CMakeLists.txt  QtApplication.cpp  QtApplication.hpp  QtApplicationComponent.cpp  QtApplicationComponent.hpp
NeoIMP/SDF/Support/: UidGenerator.hpp
NeoIMP/SDF/UILayer/: BaseHook.hpp  BaseHook.tpp  CMakeLists.txt  Component.cpp  IUIController.hpp  UIComponent.cpp  UIComponent.hpp
NeoIMP/SDF/UILayer/Gui/: Gui.cpp  (+10 more)
QtPlugin/: CMakeLists.txt  LengthQuantityEditPlugin.cpp  LengthQuantityEditPlugin.hpp  ResolutionQuantityEditPlugin.cpp  ResolutionQuantityEditPlugin.hpp  UnitQuantityEditPlugin.cpp  UnitQuantityEditPlugin.hpp
(+2552 files in other folders)
